remove UI route
