# docs/swagger.yml
@@ -7,30 +7,6 @@ info:
     email: infra@acm.illinois.edu
 
 paths:
-  /:
-    get:
-      summary: Get UI
-      operationId: getui
-
-      responses:
-        200:
-          description: OK
-
-
-      x-amazon-apigateway-auth:
-        type: NONE
-
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: 200
-        passthroughBehavior: when_no_match
-        httpMethod: POST
-        contentHandling: CONVERT_TO_TEXT
-        type: aws_proxy
-        uri: 
-          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${ApplicationPrefix}-lambda/invocations
-
   /api/v1/healthz:
     get:
       summary: Ping the API
